src/test/resources/inspections/codeError/FileClassnameCaseInspection/IncorrectName.php
<?php

class <error descr="[PHP Hammer] Class name (\"Dummy\") does not match the file that stores it (\"IncorrectName.php\").">Dummy</error> {
}
